# insurance_hedging_simulator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: hedge_demo.py  liability_demo.py  risk_exposures_demo.py  run_end_to_end.py  scenarios_demo.py
src/insurance_hedging_simulator/: __init__.py  curve.py  curve_risk.py  hedge_swap.py  liabilities.py  risk_helpers.py  scenarios.py  stress.py
tests/: test_curve_basics.py  test_curve_equals_flat_when_zeros_flat.py  test_curve_parity.py  test_dv01_duration_identity.py  test_hedge_sizing.py  test_kr01_no_div_zero.py  test_life_vs_certain.py  test_quickcheck.py  test_scenarios.py  test_stress_runner_multihedge.py  test_swaps_par_and_sign.py  test_two_node_hedge_sizing.py
