[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-hedging-simulator"
version = "0.0.1"
description = "MVP engine for insurance liability PV, duration/DV01, and hedging analytics"
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
pythonpath = ["src"]
